--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: GoTenancy
-description: A Go library for building SaaS and web app.
+description: 一个构建 SaaS 和 web 应用的 Go 依赖库
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
