--- a/backend/config/conf.tml.example
+++ b/backend/config/conf.tml.example
@@ -10,7 +10,7 @@ Charset = "UTF-8"
         Name = "GoTenancy" #项目名称
         Url = "irisadminapi.com:80"
         LoggerLevel = "debug" # 日志类型 "disable" "fatal" "error" "warn""info" "debug"
-        DriverType = "Sqlite" # 数据库类型 "Sqlite" "Mysql"
+        DriverType = "Sqlite" # 数据库类型 "Sqlite" , "Mysql"
         CreateSysData = true # 是否创建系统数据 true / false
     [Other.Mysql]
         Connect ="root:passwrod@(127.0.0.1:3306)/"
